--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+   "cypress": "^8.7.0"
+  },
   "devDependencies": {
-    "cypress": "^3.0.3"
+     "cypress": "^8.7.0"
   }
 }
