--- a/app.json
+++ b/app.json
@@ -1,15 +1,16 @@
 {
-  "stack": "heroku-18",
+  "description": "Heroku CI that runs E2E tests using Cypress",
+  "stack": "cedar-14",
   "environments": {
     "test": {
       "buildpacks": [
-        {
-          "url": "https://github.com/heroku/heroku-buildpack-google-chrome"
-        },
-        {
-          "url": "heroku/nodejs"
-        }
-      ]
+        { "url": "heroku/nodejs" },
+        { "url": "https://github.com/heroku/heroku-buildpack-xvfb-google-chrome" }
+      ],
+      "scripts": {
+        "test-setup": "CYPRESS_CACHE_FOLDER=./node_modules/cypress/cache/Cypress npx cypress cache path && CYPRESS_CACHE_FOLDER=./node_modules/cypress/cache/Cypress npx cypress cache list",
+        "test": "CYPRESS_CACHE_FOLDER=./node_modules/cypress/cache/Cypress npm run test
+      }
     }
   }
 }
