--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
       ],
       "scripts": {
         "test-setup": "CYPRESS_CACHE_FOLDER=./node_modules/cypress/cache/Cypress npx cypress cache path && CYPRESS_CACHE_FOLDER=./node_modules/cypress/cache/Cypress npx cypress cache list",
-        "test": "CYPRESS_CACHE_FOLDER=./node_modules/cypress/cache/Cypress npm run test
+        "test": "CYPRESS_CACHE_FOLDER=./node_modules/cypress/cache/Cypress npm run test"
       }
     }
   }
