--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
    "cypress": "^8.7.0"
   },
   "devDependencies": {
-     "cypress": "^8.7.0"
+     "cypress": "^8.7.0",
+     "start-server-and-test": "^1.14.0"
   }
 }
