--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
       "start": "node app.js",
     "test": "node run-cypress-tests.js -r tap",
     "testing": "node run-cypress-tests.js",
-    "testChrome": "cypress run --headed --browser electron"
+    "testChrome": "cypress run --headed --browser electron",
+    "startCypress": "cypress open"
   },
   "keywords": [],
   "author": "",
